[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,7 @@
         </title>
     </head>
     <body>
+        <a href="/">Home</a>
         <h3>Article 1 goes by editing</h3>
         <p>This is for article one This is for article one  This is for article one</p>
         <p>This is for article one This is for article one This is for article one This is for article one This is for article one
