[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,12 +6,22 @@
             
             Article 1
         </title>
+         <meta name="viewport" content="width=device-width, initial-scale=1" />
+         <style>
+             .container{
+                 max-width:800px;
+                 color:grey;
+                 font-family:sans-serif;
+             }
+         </style>
     </head>
     <body>
-        <a href="/">Home</a>
-        <h3>Article 1 goes by editing</h3>
-        <p>This is for article one This is for article one  This is for article one</p>
-        <p>This is for article one This is for article one This is for article one This is for article one This is for article one
-        This is for article one This is for article one This is for article one This is for article one</p>
+        <div class="container">
+          <a href="/">Home</a>
+           <h3>Article 1 goes by editing</h3>
+           <p>This is for article one This is for article one  This is for article one</p>
+           <p>This is for article one This is for article one This is for article one This is for article one This is for article one
+            This is for article one This is for article one This is for article one This is for article one</p>
+        </div>
     </body>
 </html>
