--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,7 @@
          <style>
              .container{
                  max-width:800px;
+                 margin:0px auto;
                  color:grey;
                  font-family:sans-serif;
              }
