--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -11,7 +11,10 @@
              .container{
                  max-width:800px;
                  margin:0px auto;
-                 color:grey;
+                 padding-top:60px;
+                 padding-left:10px;
+                 padding-right:10px;
+                 color:black;
                  font-family:sans-serif;
              }
          </style>
