--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,17 +7,7 @@
             Article 1
         </title>
          <meta name="viewport" content="width=device-width, initial-scale=1" />
-         <style>
-             .container{
-                 max-width:800px;
-                 margin:0px auto;
-                 padding-top:60px;
-                 padding-left:10px;
-                 padding-right:10px;
-                 color:black;
-                 font-family:sans-serif;
-             }
-         </style>
+         <link href="ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
